[gd_scene load_steps=10 format=2]

[ext_resource path="res://Asset/Art/Splash/ShipwreckAdventure-Main menu background.jpg" type="Texture" id=1]
[ext_resource path="res://Asset/Art/Splash/ShipwreckAdventure-Main menu background-TITLE.png" type="Texture" id=2]
[ext_resource path="res://Src/UI/Tltle.gd" type="Script" id=3]
[ext_resource path="res://Src/UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Src/UI/VolumeSlider.gd" type="Script" id=5]
[ext_resource path="res://Src/UI/SettingPopUp.gd" type="Script" id=6]
[ext_resource path="res://Src/UI/FullScreenBox.gd" type="Script" id=7]
[ext_resource path="res://Src/UI/RulePopUp.gd" type="Script" id=8]
[ext_resource path="res://Src/UI/AboutPopUp.gd" type="Script" id=9]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="BackGround" type="Sprite" parent="."]
scale = Vector2( 0.166667, 0.166667 )
texture = ExtResource( 1 )
centered = false

[node name="Tltle" type="Sprite" parent="BackGround"]
texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )

[node name="MenuUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="MenuUI"]
margin_right = 320.0
margin_bottom = 179.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="MarginContainer" parent="MenuUI/UI"]
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="VBoxContainer" parent="MenuUI/UI/Buttons"]
margin_right = 320.0
margin_bottom = 180.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuUI/UI/Buttons/Button"]
margin_left = 86.0
margin_top = 146.0
margin_right = 234.0
margin_bottom = 166.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Start" type="Button" parent="MenuUI/UI/Buttons/Button/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="Control2" type="Control" parent="MenuUI/UI/Buttons/Button/HBoxContainer"]
margin_left = 45.0
margin_right = 45.0
margin_bottom = 20.0

[node name="Setting" type="Button" parent="MenuUI/UI/Buttons/Button/HBoxContainer"]
margin_left = 49.0
margin_right = 105.0
margin_bottom = 20.0
text = "Setting"

[node name="Control" type="Control" parent="MenuUI/UI/Buttons/Button/HBoxContainer"]
margin_left = 109.0
margin_right = 109.0
margin_bottom = 20.0

[node name="Exit" type="Button" parent="MenuUI/UI/Buttons/Button/HBoxContainer"]
margin_left = 113.0
margin_right = 148.0
margin_bottom = 20.0
text = "Exit"

[node name="Space" type="Control" parent="MenuUI/UI/Buttons/Button"]
margin_top = 170.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 10 )

[node name="Button2" type="VBoxContainer" parent="MenuUI/UI/Buttons"]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
alignment = 2

[node name="Rule" type="Button" parent="MenuUI/UI/Buttons/Button2"]
margin_left = 280.0
margin_top = 132.0
margin_right = 320.0
margin_bottom = 152.0
size_flags_horizontal = 8
text = "Rule"
align = 0

[node name="About" type="Button" parent="MenuUI/UI/Buttons/Button2"]
margin_left = 270.0
margin_top = 156.0
margin_right = 320.0
margin_bottom = 176.0
size_flags_horizontal = 8
text = "About"

[node name="Control" type="Control" parent="MenuUI/UI/Buttons/Button2"]
margin_top = 180.0
margin_right = 320.0
margin_bottom = 180.0

[node name="SettingPopUp" type="MarginContainer" parent="MenuUI/UI"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuUI/UI/SettingPopUp"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.454902, 0.643137, 0.756863, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/UI/SettingPopUp"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_right = 320.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Volume" type="HBoxContainer" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 34.0
margin_right = 320.0
margin_bottom = 50.0

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_top = 1.0
margin_right = 73.0
margin_bottom = 15.0
text = "Volume"

[node name="Control2" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
margin_left = 77.0
margin_right = 97.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 0 )

[node name="Slider" type="HSlider" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
margin_left = 101.0
margin_right = 201.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05
script = ExtResource( 5 )

[node name="Value" type="Label" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 205.0
margin_top = 1.0
margin_right = 213.0
margin_bottom = 15.0
text = "0"

[node name="Control2" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 54.0
margin_right = 320.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 20 )

[node name="FullScreen" type="HBoxContainer" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 78.0
margin_right = 320.0
margin_bottom = 102.0

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Full Screen"

[node name="CheckBox" type="CheckBox" parent="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen"]
margin_left = 98.0
margin_right = 122.0
margin_bottom = 24.0
script = ExtResource( 7 )

[node name="Control3" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 106.0
margin_right = 320.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 40 )

[node name="Button" type="HBoxContainer" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 150.0
margin_right = 320.0
margin_bottom = 170.0
alignment = 2

[node name="Back" type="Button" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Button"]
margin_left = 254.0
margin_right = 296.0
margin_bottom = 20.0
text = "Back"

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="AboutPopUP" type="MarginContainer" parent="MenuUI/UI"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuUI/UI/AboutPopUP"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.733333, 0.745098, 0.517647, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/UI/AboutPopUP"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 24.0
margin_right = 320.0
margin_bottom = 123.0
text = "    Goro - Main programmer
    Mai - Designer / programmer
    GraphicEdit - Art
    Arix - Art
    Lan Coulter - Music / SFX 
"

[node name="Control2" type="Control" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
margin_top = 127.0
margin_right = 320.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 20 )

[node name="Button" type="HBoxContainer" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
margin_top = 151.0
margin_right = 320.0
margin_bottom = 171.0
alignment = 2

[node name="Back" type="Button" parent="MenuUI/UI/AboutPopUP/VBoxContainer/Button"]
margin_left = 254.0
margin_right = 296.0
margin_bottom = 20.0
text = "Back"

[node name="Control" type="Control" parent="MenuUI/UI/AboutPopUP/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[node name="RulePopUp" type="MarginContainer" parent="MenuUI/UI"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuUI/UI/RulePopUp"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.701961, 0.521569, 0.768627, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/UI/RulePopUp"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 24.0
margin_right = 320.0
margin_bottom = 106.0
text = "    WASD - Move
  
    Avoid the tarps and enmies.

    Collect the treasure."

[node name="Control2" type="Control" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 147.0
rect_min_size = Vector2( 0, 37 )

[node name="Button" type="HBoxContainer" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
margin_top = 151.0
margin_right = 320.0
margin_bottom = 171.0
alignment = 2

[node name="Back" type="Button" parent="MenuUI/UI/RulePopUp/VBoxContainer/Button"]
margin_left = 254.0
margin_right = 296.0
margin_bottom = 20.0
text = "Back"

[node name="Control" type="Control" parent="MenuUI/UI/RulePopUp/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 0 )

[connection signal="pressed" from="MenuUI/UI/Buttons/Button/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons/Button/HBoxContainer/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons/Button/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons/Button2/Rule" to="." method="_on_Rule_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons/Button2/About" to="." method="_on_About_pressed"]
[connection signal="value_changed" from="MenuUI/UI/SettingPopUp/VBoxContainer/Volume/Slider" to="MenuUI/UI/SettingPopUp/VBoxContainer/Volume/Slider" method="_on_value_changed"]
[connection signal="pressed" from="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen/CheckBox" to="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen/CheckBox" method="_on_CheckBox_pressed"]
[connection signal="pressed" from="MenuUI/UI/SettingPopUp/VBoxContainer/Button/Back" to="MenuUI/UI/SettingPopUp" method="_on_Back_pressed"]
[connection signal="pressed" from="MenuUI/UI/AboutPopUP/VBoxContainer/Button/Back" to="MenuUI/UI/AboutPopUP" method="_on_Back_pressed"]
[connection signal="pressed" from="MenuUI/UI/RulePopUp/VBoxContainer/Button/Back" to="MenuUI/UI/RulePopUp" method="_on_Back_pressed"]
